--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -144,12 +144,13 @@ nav:
   - Learn:
     - Overview: learn/overview.md
     - Getting Started:
-      - Prerequisites: learn/prerequisites.md
+      - Before Starting: learn/before-starting.md
       - Simulation: learn/simulation.md
       - Scenery Application: learn/scenery-application.md
       - Standalone Library: learn/standalone-library.md
     - Guides:
       - Scenery Basics: learn/scenery-basics.md
+      - Features: learn/features.md
       - Scenery Layout: learn/scenery-layout.md
       - Scenery Input: learn/scenery-input.md
       - Scenery Accessibility: learn/scenery-accessibility.md
@@ -159,24 +160,21 @@ nav:
       - Best Practices: learn/best-practices.md
     - Tutorials:
       - Three.js Integration: learn/threejs-integration.md
-      - Simulation Exercises: learn/simulation-exercises.md
     - Examples:
       - Demo Simulation: learn/examples/demo-simulation.md
       - Scenery Layout: learn/examples/scenery-layout.md
       - Simulation Showcase: learn/examples/simulation-showcase.md
       - Application Showcase: learn/examples/application-showcase.md
-    - Overview:
-      - Install: learn/setup.md
-      - Create a New Project: learn/templates/projecta_rasa.md
-      - Make a Simulation: learn/templates/simula_rasa.md
-      - Add SceneryStack to a Project: learn/templates/subprojecta_rasa.md
-    - Guides: 
-      - Web Overview: learn/web/web_overview.md
-      - Full Project Demo: learn/web/scenery_demo.md
-      - Coding Conventions: info_sync/coding_conventions.md
-      - PhET TypeScript Conventions: info_sync/typescript_conventions.md
-    - Examples:
-      - Exercises: info_sync/scenerystack_exercises.md
+#    - Overview:
+#      - Install: learn/setup.md
+#      - Create a New Project: learn/templates/projecta_rasa.md
+#      - Make a Simulation: learn/templates/simula_rasa.md
+#      - Add SceneryStack to a Project: learn/templates/subprojecta_rasa.md
+#    - Guides:
+#      - Web Overview: learn/web/web_overview.md
+#      - Full Project Demo: learn/web/scenery_demo.md
+#      - Coding Conventions: info_sync/coding_conventions.md
+#      - PhET TypeScript Conventions: info_sync/typescript_conventions.md
   - Reference:
     - Libraries: reference/scenerystack_list.md
     - Software Design Patterns: info_sync/software_design_patterns.md
