--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -159,6 +159,7 @@ nav:
       - Vectors and Matrices: learn/vectors-and-matrices.md
       - Shapes: learn/shapes.md
       - Best Practices: learn/best-practices.md
+      - Modifying SceneryStack: learn/modifying-scenerystack.md
     - Tutorials:
       - Creating an Interactive Figure: learn/tutorials/creating-an-interactive-figure.md
       - Three.js Integration: learn/tutorials/threejs-integration.md
@@ -1745,6 +1746,7 @@ nav:
     - Sustainability Plan: community/sustainability_plan.md
     - Contribute:
       - Contribution Guide: CONTRIBUTING.md
+      - Code Contribution: community/code-contribution.md
       - Contributor License Agreement: community/CLA.md
       - Setting Up Development Environment: learn/dev/dev_environment.md
       - SceneryStack Versioning: learn/dev/versioning.md
