--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,15 @@ edit_uri: edit/main/docs
 extra:
   version:
     provider: mike # for versioning plugin
+  annotate:
+    json: [.s2]
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/scenerystack/
+    - icon: fontawesome/brands/mastodon
+      link: https://mastodon.social/@scenerystack
+    - icon: fontawesome/brands/youtube
+      link: https://www.youtube.com/@SceneryStack
 
 extra_css:
   - stylesheets/extra.css
@@ -84,19 +93,6 @@ plugins:
   - minify:
       minify_html: true
 
-# Customization
-extra:
-  annotate:
-    json: [.s2]
-  social:
-    - icon: fontawesome/brands/github
-      link: https://github.com/scenerystack/
-    - icon: fontawesome/brands/mastodon
-      link: https://mastodon.social/@scenerystack
-    - icon: fontawesome/brands/youtube
-      link: https://www.youtube.com/@SceneryStack
-    
-
 # Extensions
 markdown_extensions:
   - abbr
@@ -129,6 +125,9 @@ markdown_extensions:
       repo: mkdocs-material
   - pymdownx.mark
   - pymdownx.smartsymbols
+  - pymdownx.snippets:
+      base_path: docs/snippets/
+      check_paths: true
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
