--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,7 @@ extra_css:
 extra_javascript:
   - js/mathjax.js
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+  - js/importmap.js
 
 # Configuration
 theme:
