Scenery layout examples rename

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -167,7 +167,7 @@ nav:
       - Creating an Interactive Figure: learn/tutorials/creating-an-interactive-figure.md
     - Examples:
       - Demo Simulation: learn/examples/demo-simulation.md
-      - Scenery Layout: learn/examples/scenery-layout.md
+      - Scenery Layout Examples: learn/examples/scenery-layout-examples.md
       - Simulation Showcase: learn/examples/simulation-showcase.md
       - Application Showcase: learn/examples/application-showcase.md
 #      - Accessibility Examples: learn/examples/accessibility-examples.md
