fix h1 to title
Lack of an H1 was causing the title to read as Introduction. Renamed for now until a better fix can be done

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -141,7 +141,7 @@ markdown_extensions:
   - pymdownx.tilde
 
 nav:
-  - Introduction: index.md
+  - SceneryStack: index.md
   - Learn:
     - Overview: learn/overview.md
     - Getting Started:
