initial commit for accessibility basics documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -156,6 +156,7 @@ nav:
       - Scenery Basics: learn/scenery-basics.md
       - Scenery Layout: learn/scenery-layout.md
       - Scenery Input: learn/scenery-input.md
+      - Scenery Accessibility Basics: learn/scenery-accessibility-basics.md
       - Scenery Accessibility: learn/scenery-accessibility.md
       - Emitters and Properties: learn/emitters-and-properties.md
 #      - Vectors and Matrices: learn/vectors-and-matrices.md
