--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -90,7 +90,17 @@ theme:
 
 # Plugins
 plugins:
-  # - blog
+  - blog:
+      blog_dir: news
+      post_date_format: medium
+  - rss:
+      enabled: true
+      match_path: .*
+      date_from_meta:
+        as_creation: date
+      categories:
+        - categories
+        - tags
   - search:
       separator: '(?!\b)(?=[A-Z][a-z])|\.(?!\d)'
   - minify:
